# simple-python-messenger

./: pyproject.toml
messenger/: app.py
public/: index.html
tests/: test_messenger.py
