[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["Eugeny Schibrikov <shook@live.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.13.4"
aiofiles = "^0.7.0"
websockets = "^9.1"
aioredis = "^1.3.1"
coolname = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
